Bug 120426 - Outline/Chapter Numbering Dialog can only accept one level (GTK3)
Summary: Outline/Chapter Numbering Dialog can only accept one level (GTK3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.2.1 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.0.1 target:6.1.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2018-10-08 16:11 UTC by Mike Sapsard
Modified: 2018-11-26 14:39 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
An odt file that shows the problem (34.18 KB, application/vnd.oasis.opendocument.text)
2018-11-16 11:14 UTC, Mike Sapsard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Sapsard 2018-10-08 16:11:49 UTC
Description:
When using the dialog to set outline numbering for different chapter or heading levels, only the last one entered is remembered and applied.

Steps to Reproduce:
1.Click on Tools | Chapter numbering
2.Enter the paragraph style for level 1.
3.Select and enter the paragraph style for level 2.
4.Look again at the settings for Level 1.
5.Look in a document with those styles. Only th elast entered Level will be numbered.

Actual Results:
Outline numbering for all levels except the last entered was lost.

Expected Results:
Formatted all headings at alllevels.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Mike Sapsard 2018-10-09 16:03:27 UTC
Tested in LibreOffice-still-x86_64.AppImage. 

It works there correctly.
The file that was not displaying correctly, opens with all headings numbered correctly.

Using the Fresh image again, the file does not display numbering.
Comment 2 Dieter 2018-10-09 18:35:45 UTC
Can't confirm with

Version: 6.2.0.0.alpha0+ (x64)
Build ID: 48cfa0b00b22f11ade53aec79b2fdddad253e1bd
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-10-03_02:01:42
Locale: en-US (de_DE); Calc: CL
Comment 3 Xisco Faulí 2018-11-09 13:41:19 UTC
(In reply to Mike Sapsard from comment #1)
> Tested in LibreOffice-still-x86_64.AppImage. 
> 
> It works there correctly.
> The file that was not displaying correctly, opens with all headings numbered
> correctly.
> 
> Using the Fresh image again, the file does not display numbering.

So it works fine in LibreOffice 6.1.3.1 but not in LibreOffice 6.0.7.3 ?
OTOH, does it happen only with a specific document? Could you please attach it ?
SEtting to NEEDINFO
Comment 4 Mike Sapsard 2018-11-16 11:14:42 UTC
Created attachment 146682 [details]
An odt file that shows the problem

The attachment is a file that originated on MS Word. Chapter (aka Outline) Numbering will only show the last level set in the Chapter Numbering dialog.

In the Chapter Numbering dialog, only one heading level can be shown at any time. When trying to set a new heading level, the previous level becomes blank.

Heading 1 and Heading 2 are highlighted to show their position.

Tools| Update | Update All has no effect.

Now using 6.1.3.2.
Comment 5 Xisco Faulí 2018-11-19 10:09:08 UTC
Moving it back to UNCONFIRMED until someone else confirms it.
Comment 6 Buovjaga 2018-11-22 16:19:34 UTC
I repro, but only on Linux and with GTK3.

1. Open attachment 146682 [details]
2. Tools - Chapter Numbering
3. Click Level 2
4. Change Paragraph style from None to something else
5. Click Level 1

Style has changed from Heading 1 to None

The test with appimage might mean that GTK3 was not used.

Arch Linux 64-bit
Version: 6.2.0.0.alpha1+
Build ID: 72e6269b88a32a672e00d2c25f0d0400038d1360
CPU threads: 8; OS: Linux 4.19; UI render: default; VCL: gtk3_kde5; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Built on 14 November 2018
Comment 7 Xisco Faulí 2018-11-22 16:38:37 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=0920b04bca3d58d89b026bcf999ea43d0e855715

author	Caolán McNamara <caolanm@redhat.com>	2018-05-04 14:53:11 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-05-04 22:12:46 +0200
commit 0920b04bca3d58d89b026bcf999ea43d0e855715 (patch)
tree e819560b7822cda8cd76a0494a4ec6135f3585a9
parent 2cab4acbe2aaaee6e5b9afeb68f3e555ecff2ec7 (diff)
weld SwOutlineTabDialog

Bisected with: bibisect-linux64-6.1

Adding Cc: to Caolán McNamara
Comment 8 Caolán McNamara 2018-11-22 16:47:41 UTC
looks like there's a piece of magic done on gaining focus
Comment 9 Vlad 2018-11-22 17:15:39 UTC
Reproduced on:
Version: 6.1.3.2
Build ID: 10(Build:2)
CPU threads: 8;
OS: Linux 4.19; 
UI render: default; 
VCL: gtk3_kde5;
Locale: pl-PL (en_US.UTF-8,LANG=en_US.UTF-8); 
Calc: group threaded

Every new created document or opened document with good levels set becomes broken after changing any level in this office version.
Comment 10 Commit Notification 2018-11-22 20:56:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/257a187af4165571aa379ee6e00e5fb8d1167c82%5E%21

tdf#120426 save the style names when set or changed

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2018-11-22 20:57:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/9de256dbdf7267fcbfd484d021f8f079e790d2b3%5E%21

tdf#120426 save the style names when set or changed

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2018-11-22 21:00:19 UTC
6-1 backport in gerrit
Comment 13 Xisco Faulí 2018-11-26 13:05:06 UTC
Verified in

Version: 6.2.0.0.beta1+
Build ID: a63cd8bbe7cf881daa8dc7a7f32f3e5ac384e902
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this!!
Comment 14 Commit Notification 2018-11-26 14:39:49 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/d3a79b489adc6a40b3c4063c1ec324d36686853b%5E%21

tdf#120426 save the style names when set or changed

It will be available in 6.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.