tdf#120426 save the style names when set or changed

instead of waiting until gaining focus of the listbox,
because of the differences in what that focus means in
the different backends. It was an odd way to do things anyway.

Change-Id: I072e3da04db184b49a86a9888080b60223813729